--- a/README
+++ b/README
@@ -7,5 +7,5 @@ Tools needed,
 
 * Plan9 tools (rc, mk)
 * Some sort of coreutils (did not test it yet with sbase)
-* discount (markdown compiler)
+* markdown compiler
 * Git
